Corrections and double quotes ``''
Signed-off-by: Lev Lamberov <l.lamberov@gmail.com>

--- a/ru.po
+++ b/ru.po
@@ -5555,7 +5555,7 @@ msgid ""
 msgstr ""
 "Руководство распространяется в надежде на то, что оно будет кому-нибудь "
 "полезно, но <emphasis>без каких-либо гарантий</emphasis>; даже без гарантии "
-"товарного состояния или пригодности её использования в конкретных целях.  "
+"товарного состояния или пригодности его использования в конкретных целях.  "
 "Для получения более подробной информации ознакомьтесь со Стандартной "
 "общественной лицензией GNU."
 
@@ -5583,10 +5583,10 @@ msgid ""
 "de.html\">German</ulink> and <ulink url=\"index.ja.html\">Japanese</ulink>."
 msgstr ""
 "Если вы хотите распечатать данное руководство, вам следует использовать "
-"<ulink url=\"developers-reference.pdf\">pdf-версию</ulink>.  Данная страница "
-"также доступна на <ulink url=\"index.fr.html\">французском</ulink>, <ulink "
-"url=\"index.de.html\">немецком</ulink> и <ulink url=\"index.ja.html"
-"\">японском</ulink> языках."
+"<ulink url=\"developers-reference.ru.pdf\">pdf-версию</ulink>.  Данная "
+"страница также доступна на <ulink url=\"index.html\">английском</ulink>, "
+"<ulink url=\"index.fr.html\">французском</ulink>, <ulink url=\"index.de.html"
+"\">немецком</ulink> и <ulink url=\"index.ja.html\">японском</ulink> языках."
 
 #. type: Content of: <chapter><title>
 #: l10n.dbk:7
@@ -5606,7 +5606,7 @@ msgstr ""
 "Debian поддерживает постоянно увеличивающееся число языков.  Даже если вашим "
 "родным языком является английский, и вы не говорите ни на одном другом "
 "языке, как сопровождающий вы должны знать о процессе интернационализации "
-"(сокращённо i18n, так как в слове inernationalization между 'i' и 'n' 18 "
+"(сокращённо i18n, так как в слове internationalization между 'i' и 'n' 18 "
 "букв).  Следовательно, даже если вам вполне подходят программы с интерфейсом "
 "на английском языке, вам следует прочесть большую часть этой главы."
 
@@ -6068,12 +6068,12 @@ msgid ""
 "software.  How do you actually become a Debian developer so that your work "
 "can be incorporated into the Project?"
 msgstr ""
-"Итак, вы прочли всю документацию, вы прочли <ulink url=\"&url-newmaint-guide;"
-"\">Руководство начинающего разработчика Debian</ulink>, поняли, зачем нужно "
-"всё то, что содержится в пакете <systemitem role=\"package\">hello</"
-"systemitem>, вы собираетесь сделать своё любимое ПО частью Debian.  Как же "
-"вам стать разработчиком Debian, как сделать так, чтобы ваша работа была "
-"включена в Проект?"
+"Итак, вы прочли всю документацию, просмотрели <ulink url=\"&url-newmaint-"
+"guide;\">Руководство начинающего разработчика Debian</ulink>, поняли, зачем "
+"нужно всё то, что содержится в пакете <systemitem role=\"package\">hello</"
+"systemitem> и собираетесь сделать своё любимое ПО частью Debian.  Как же вам "
+"стать разработчиком Debian, как сделать так, чтобы ваша работа была включена "
+"в Проект?"
 
 #. type: Content of: <chapter><section><para>
 #: new-maintainer.dbk:19
@@ -6700,7 +6700,7 @@ msgid ""
 msgstr ""
 "Это позволяет остальным сопровождающим знать о данном пакете больше, чем то, "
 "что содержится в одной строке описания и обычной записи из журнала изменений "
-"вида ``Initial release'', которые публикуются в &email-debian-devel-changes;."
+"вида „Initial release“, которые публикуются в &email-debian-devel-changes;."
 
 #. type: Content of: <chapter><section><itemizedlist><listitem><para>
 #: pkgs.dbk:91
@@ -8983,10 +8983,10 @@ msgid ""
 "updated, as described in <xref linkend=\"override-file\"/>."
 msgstr ""
 "Если, с другой стороны, вам необходимо изменить <literal>подраздел</literal> "
-"одного из ваших пакетов (напр., ``devel'', ``admin''), то это уже немного "
-"другая процедура.  Исправьте подраздел в управляющем файле вашего пакета, "
-"затем заново загрузите пакет.  Кроме того, вам следует обновить файл "
-"отклонений, это описано в разделе <xref linkend=\"override-file\"/>."
+"одного из ваших пакетов (напр., „devel“, „admin“), то это уже немного другая "
+"процедура.  Исправьте подраздел в управляющем файле вашего пакета, затем "
+"заново загрузите пакет.  Кроме того, вам следует обновить файл отклонений, "
+"это описано в разделе <xref linkend=\"override-file\"/>."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1277
@@ -9586,7 +9586,7 @@ msgstr ""
 "У тех, кто занимается переносом, трудная и необычная задача, поскольку им "
 "необходимо работать с большим объёмом пакетов.  В идеале каждый пакет с "
 "исходным кодом должен собираться прямо из коробки.  К сожалению, зачастую "
-"это не так.  Данный раздел содержит список ``ошибочек'', которые часть "
+"это не так.  Данный раздел содержит список „ошибочек“, которые часть "
 "совершают сопровождающие Debian — общих проблем, которые ставят в тупик тех, "
 "кто занимается переносом, и делают их работу неоправданно сложной."
 
@@ -9899,12 +9899,11 @@ msgid ""
 "the archive maintainers will reject your upload (due to lack of "
 "corresponding source code)."
 msgstr ""
-"Для такой повторной компиляции требуется специальное ``магическое'' "
-"назначение версий, так чтобы инструменты для сопровождения архива "
-"распознали, что хотя даже и имеется новая Debian-версия, соответствующего "
-"обновления исходного кода не было.  Если вы сделаете это неправильно, "
-"сопровождающие архива отклонят вашу загрузку (из-за отсутствия "
-"соответствующего исходного кода)."
+"Для такой повторной компиляции требуется специальное „магическое“ назначение "
+"версий, так чтобы инструменты для сопровождения архива распознали, что хотя "
+"даже и имеется новая Debian-версия, соответствующего обновления исходного "
+"кода не было.  Если вы сделаете это неправильно, сопровождающие архива "
+"отклонят вашу загрузку (из-за отсутствия соответствующего исходного кода)."
 
 #. type: Content of: <chapter><section><section><section><para><footnote><para>
 #: pkgs.dbk:1736
@@ -9935,15 +9934,15 @@ msgid ""
 "should have a version number of <literal>3.4+b2</literal>.<placeholder type="
 "\"footnote\" id=\"0\"/>"
 msgstr ""
-"``Магия'' для NMU повторной компиляции включается путём использования "
-"суффикса в номере версии пакет, имеющего следующий вид: "
-"<literal>b<replaceable>номер</replaceable></literal>.  Например, если "
-"последняя версия пакета, которую вы заново компилируете, была версией "
-"<literal>2.9-3</literal>, ваша двоичная NMU должна иметь версию "
-"<literal>2.9-3+b1</literal>.  Если последней версией была <literal>3.4+b1</"
-"literal> (т. е., родной пакет, для которого в предыдущий раз уже была "
-"выполнена NMU с повторной компиляцией), ваша двоичная NMU должна иметь номер "
-"версии <literal>3.4+b2</literal>.<placeholder type=\"footnote\" id=\"0\"/>"
+"„Магия“ для NMU повторной компиляции включается путём использования суффикса "
+"в номере версии пакет, имеющего следующий вид: <literal>b<replaceable>номер</"
+"replaceable></literal>.  Например, если последняя версия пакета, которую вы "
+"заново компилируете, была версией <literal>2.9-3</literal>, ваша двоичная "
+"NMU должна иметь версию <literal>2.9-3+b1</literal>.  Если последней версией "
+"была <literal>3.4+b1</literal> (т. е., родной пакет, для которого в "
+"предыдущий раз уже была выполнена NMU с повторной компиляцией), ваша "
+"двоичная NMU должна иметь номер версии <literal>3.4+b2</literal>."
+"<placeholder type=\"footnote\" id=\"0\"/>"
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1744
@@ -10143,7 +10142,7 @@ msgstr ""
 "как распределённая клиент-серверная система сборки дистрибутива.  Обычно она "
 "используется вместе со сборочными службами, запускающими программу "
 "<systemitem role=\"package\">buildd</systemitem>. <literal>Сборочные службы</"
-"literal> являются ``подчинёнными'' узлами, они связываются с центральной "
+"literal> являются „подчинёнными“ узлами, они связываются с центральной "
 "системой <systemitem role=\"package\">wanna-build</systemitem> для получения "
 "списка пакетов, которые следует собрать."
 
@@ -12483,8 +12482,8 @@ msgstr ""
 "Если у вас имеются проблемы с конкретной службой, которые не связаны с "
 "администрированием системы (такие как пакеты, которые следует удалить из "
 "архива, предложения для веб-сайта и т. д.), вам следует отправить сообщение "
-"об ошибке в псевдопакете ``pseudo-package''.  Информацию о том, как "
-"отправлять такие сообщения об ошибках, см. <xref linkend=\"submit-bug\"/>."
+"об ошибке в псевдопакете „pseudo-package“.  Информацию о том, как отправлять "
+"такие сообщения об ошибках, см. <xref linkend=\"submit-bug\"/>."
 
 #. type: Content of: <chapter><section><para>
 #: resources.dbk:254
@@ -13544,16 +13543,15 @@ msgstr ""
 "literal>; Debian 3.0, <literal>woody</literal>; Debian 3.1, <literal>sarge</"
 "literal>; Debian 4.0, <literal>etch</literal>; Debian 5.0, <literal>lenny</"
 "literal>; Debian 6.0, <literal>squeeze</literal>, следующий выпуск будет "
-"назван <literal>wheezy</literal>.  Также имеется ``псевдовыпуск'', "
-"называемый <literal>sid</literal>, который является текущим "
-"<literal>нестабильным</literal> выпуском; поскольку пакеты перемещаются из "
-"<literal>нестабильного</literal> выпуска в <literal>тестируемый</literal> "
-"выпуске по мере того, как они приближаются к стабильности, сам <literal>sid</"
-"literal> никогда не будет выпущен.  Помимо обычного содержимого выпуска "
-"Debian, <literal>sid</literal> содержит пакеты для архитектур, которые пока "
-"официально не поддерживаются, или ещё не были выпущены Debian.  Эти "
-"архитектуры планируется включить в основную ветку дистрибутива в некотором "
-"будущем."
+"назван <literal>wheezy</literal>.  Также имеется „псевдовыпуск“, называемый "
+"<literal>sid</literal>, который является текущим <literal>нестабильным</"
+"literal> выпуском; поскольку пакеты перемещаются из <literal>нестабильного</"
+"literal> выпуска в <literal>тестируемый</literal> выпуске по мере того, как "
+"они приближаются к стабильности, сам <literal>sid</literal> никогда не будет "
+"выпущен.  Помимо обычного содержимого выпуска Debian, <literal>sid</literal> "
+"содержит пакеты для архитектур, которые пока официально не поддерживаются, "
+"или ещё не были выпущены Debian.  Эти архитектуры планируется включить в "
+"основную ветку дистрибутива в некотором будущем."
 
 #. type: Content of: <chapter><section><section><para>
 #: resources.dbk:780
@@ -14911,8 +14909,8 @@ msgid ""
 "The purpose of this document is to provide an overview of the recommended "
 "procedures and the available resources for Debian developers."
 msgstr ""
-"Целью данного документа является предоставление обзора рекомендованных "
-"процедур и доступных разработчикам Debian ресурсов."
+"Целью данного документа является обзор рекомендованных процедур и доступных "
+"разработчикам Debian ресурсов."
 
 #. type: Content of: <chapter><para>
 #: scope.dbk:14
@@ -14925,7 +14923,7 @@ msgid ""
 "packages (<xref linkend=\"porting\"/>); and how and when to do interim "
 "releases of other maintainers' packages (<xref linkend=\"nmu\"/>)."
 msgstr ""
-"Обсуждаемые здесь процедуры включают в себя то, как статьи сопровождающим "
+"Обсуждаемые здесь процедуры включают в себя то, как стать сопровождающим "
 "(<xref linkend=\"new-maintainer\"/>); как создавать новые пакеты (<xref "
 "linkend=\"newpackage\"/>) и как загружать пакеты (<xref linkend=\"upload\"/"
 ">); как работать с сообщениями об ошибках (<xref linkend=\"bug-handling\"/"
@@ -14948,10 +14946,10 @@ msgstr ""
 "Обсуждаемые ресурсы в данном руководстве включают в себя списки рассылки "
 "(<xref linkend=\"mailing-lists\"/>) и серверы (<xref linkend=\"server-"
 "machines\"/>); обсуждается структура архива Debian (<xref linkend=\"archive"
-"\"/>); объясняются разные серверы, которые принимают загрузки пакетов (<xref "
-"linkend=\"upload-ftp-master\"/>); также обсуждаются ресурсы, которые могут "
-"помочь сопровождающим контролировать качество своих пакетов (<xref linkend="
-"\"tools\"/>)."
+"\"/>); объясняются разные серверы, которые принимают загружаемые пакеты "
+"(<xref linkend=\"upload-ftp-master\"/>); также обсуждаются ресурсы, которые "
+"могут помочь сопровождающим контролировать качество своих пакетов (<xref "
+"linkend=\"tools\"/>)."
 
 #. type: Content of: <chapter><para>
 #: scope.dbk:31
@@ -14978,7 +14976,7 @@ msgid ""
 msgstr ""
 "Более того, данный документ <emphasis>не выражает формальной политики</"
 "emphasis>.  Он содержит документацию по системе Debian и лучшие практики, "
-"принимаемые большинством.  Таким образом, это не ``нормативные'' документ."
+"принимаемые большинством.  Таким образом, это не „нормативный“ документ."
 
 #. type: Content of: <appendix><title>
 #: tools.dbk:7
@@ -15390,8 +15388,8 @@ msgstr ""
 "<systemitem role=\"package\">equivs</systemitem> представляет собой ещё один "
 "пакет для создания пакетов.  Часто он предлагается для локального "
 "использования, если вам нужно сделать пакет просто для удовлетворения "
-"зависимостей.  Также он иногда используется при создании ``метапакетов'', "
-"это пакеты, чья цель состоит лишь в том, чтобы зависеть от других пакетов."
+"зависимостей.  Также он иногда используется при создании „метапакетов“, это "
+"пакеты, чья цель состоит лишь в том, чтобы зависеть от других пакетов."
 
 #. type: Content of: <appendix><section><title>
 #: tools.dbk:210
