Change "sponsor" translation and small changes
Signed-off-by: Lev Lamberov <l.lamberov@gmail.com>

--- a/ru.po
+++ b/ru.po
@@ -4200,13 +4200,13 @@ msgid ""
 "that they signed the package, they're responsible for the upload anyhow, and "
 "are likely to know what happened to the person they sponsored."
 msgstr ""
-"Некоторой проблемой являются пакеты, которые были спонсированы — их "
+"Некоторой проблемой являются пакеты, которые были поручены — их "
 "сопровождающий не является официальным разработчиком Debian.  "
-"<literal>Эшелон</literal> информации не доступен для спонсируемых людей, "
+"<literal>Эшелон</literal> информации не доступен для людей с поручителями, "
 "поэтому вам следует найти и связаться с разработчиком Debian, который "
 "фактически загрузил этот пакет.  Учитывая, что они подписали пакет, они всё "
-"равно ответственны за загрузку и должны знать, что случилось с тем, кого они "
-"спонсировали."
+"равно ответственны за загрузку и должны знать, что случилось с тем, за кого "
+"они поручались."
 
 #. type: Content of: <chapter><section><para>
 #: beyond-pkging.dbk:283
@@ -4304,7 +4304,7 @@ msgstr ""
 #. type: Content of: <chapter><section><section><title>
 #: beyond-pkging.dbk:326
 msgid "Sponsoring packages"
-msgstr "Спонсирование пакетов"
+msgstr "Поручение пакетов"
 
 #. type: Content of: <chapter><section><section><para>
 #: beyond-pkging.dbk:328
@@ -4314,17 +4314,17 @@ msgid ""
 "verify the packaging and ensure that it is of the high level of quality that "
 "Debian strives to have."
 msgstr ""
-"Спонсирование пакета предполагает загрузку пакета для сопровождающего, "
-"который сам этого сделать не может. Это нетривиальная задача, спонсор должен "
-"проверить то, как создан пакет, и гарантировать его высокое качество, "
-"качество, к которому стремится Debian."
+"Поручение пакета предполагает загрузку пакета для сопровождающего, который "
+"сам этого сделать не может. Это нетривиальная задача, поручитель должен "
+"проверить то, как создан пакет, и гарантировать его высокое качество, к "
+"которому стремится Debian."
 
 #. type: Content of: <chapter><section><section><para>
 #: beyond-pkging.dbk:334
 msgid "Debian Developers can sponsor packages. Debian Maintainers can't."
 msgstr ""
-"Разработчики Debian могут спонсировать пакеты. Сопровождающие Debian не "
-"могут."
+"Разработчики Debian могут выступать поручителями для пакетов. Сопровождающие "
+"Debian не могут."
 
 #. type: Content of: <chapter><section><section><para><orderedlist><listitem><para>
 #: beyond-pkging.dbk:340
@@ -4345,7 +4345,7 @@ msgstr ""
 #. type: Content of: <chapter><section><section><para><orderedlist><listitem><para>
 #: beyond-pkging.dbk:346
 msgid "The sponsor downloads (or checkouts) the source package."
-msgstr "Спонсор скачивает (или извлекает) пакет с исходным кодом."
+msgstr "Поручитель скачивает (или получает) пакет с исходным кодом."
 
 #. type: Content of: <chapter><section><section><para><orderedlist><listitem><para>
 #: beyond-pkging.dbk:349
@@ -4354,7 +4354,7 @@ msgid ""
 "maintainer and ask them to provide a fixed version (the process starts over "
 "at step 1)."
 msgstr ""
-"Спонсор проверяет пакет с исходным кодом. Если будут найдены какие-либо "
+"Поручитель проверяет пакет с исходным кодом. Если будут найдены какие-либо "
 "проблемы, он информируем об этом сопровождающего и просит его предоставить "
 "исправленную версию (процесс начинается снова с шага 1)."
 
@@ -4364,7 +4364,7 @@ msgid ""
 "The sponsor could not find any remaining problem. They build the package, "
 "sign it, and upload it to Debian."
 msgstr ""
-"Спонсор не нашёл каких-либо оставшихся проблем. Он собирает пакет, "
+"Поручитель не нашёл каких-либо оставшихся проблем. Он собирает пакет, "
 "подписывает его и загружает пакет в Debian."
 
 #. type: Content of: <chapter><section><section><para>
@@ -4373,8 +4373,7 @@ msgid ""
 "The process of sponsoring a package is: <placeholder type=\"orderedlist\" id="
 "\"0\"/>"
 msgstr ""
-"Процесс спонсирования пакета таков: <placeholder type=\"orderedlist\" id="
-"\"0\"/>"
+"Процесс поручения пакета таков: <placeholder type=\"orderedlist\" id=\"0\"/>"
 
 #. type: Content of: <chapter><section><section><para>
 #: beyond-pkging.dbk:360
@@ -4382,9 +4381,9 @@ msgid ""
 "Before delving in the details of how to sponsor a package, you should ask "
 "yourself whether adding the proposed package is beneficial to Debian."
 msgstr ""
-"До того как вникнуть в детали того, как осуществлять спонсирование пакета, "
-"вам следует спросить себя, является ли добавление предложенного пакета "
-"полезным для Debian."
+"До того как вникнуть в детали, как осуществлять поручение пакета, вам "
+"следует спросить себя, является ли добавление предложенного пакета полезным "
+"для Debian."
 
 #. type: Content of: <chapter><section><section><para>
 #: beyond-pkging.dbk:364
@@ -4431,14 +4430,14 @@ msgstr ""
 "Выяснение того, как он относится к Debian, также является хорошей идеей: "
 "согласен ли он с философией Debian и хочет ли присоединиться к Debian? "
 "Учитывая то, насколько просто стать сопровождающим Debian, вы вероятно "
-"захотите спонсировать пакеты только тех людей, которые хотят присоединиться "
-"к Проекту. В этом случае вы с самого начала будет знать, что вам не придется "
-"быть спонсором в течении какого-то неопределённого времени."
+"захотите поручиться за пакеты только тех людей, которые хотят присоединиться "
+"к Проекту. В этом случае вы с самого начала будет знать, что вам не придётся "
+"быть поручителем в течении какого-то неопределённого времени."
 
 #. type: Content of: <chapter><section><section><section><title>
 #: beyond-pkging.dbk:386
 msgid "Sponsoring a new package"
-msgstr "Спонсирование нового пакета"
+msgstr "Поручительство нового пакета"
 
 #. type: Content of: <chapter><section><section><section><para>
 #: beyond-pkging.dbk:388
@@ -4452,10 +4451,10 @@ msgid ""
 msgstr ""
 "Обычно новые сопровождающие испытывают определённые трудности при создании "
 "пакетов Debian — это вполне можно понять. Они будут совершать ошибки. Вот "
-"почему спонирование нового пакета в Debian требует проведения тщательного "
+"почему поручительство нового пакета в Debian требует проведения тщательного "
 "обзора процесса создания пакетов Debian. Иногда потребуется несколько "
 "повторений для того, чтобы пакет стал достаточно хорошим для его загрузки в "
-"архив Debian. Таким образом, спонсорство предполагает менторство."
+"архив Debian. Таким образом, поручительство предполагает менторство."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: beyond-pkging.dbk:396
@@ -4466,12 +4465,12 @@ msgid ""
 "really should not. It's your task to ensure that the uploaded package "
 "complies with the Debian Free Software Guidelines and is of good quality."
 msgstr ""
-"Никогда не спонсируйте новый пакет, если вы его не изучили. Изучение новых "
-"пакетов осуществляется сопровождающими ftp-архива, это гарантирует, что ПО "
-"действительно является свободным. Конечно, иногда они обнаруживают проблемы "
-"создания пакета, но вообще они не должны этим заниматься. Это ваша задача, "
-"вы должны гарантировать, что загружаемый пакет соответствует Критериям "
-"Debian по определению Свободного ПО, и что он создан качественно."
+"Никогда не поручайтесь за новый пакет, если вы его не изучили. Изучение "
+"новых пакетов осуществляется сопровождающими FTP-архива, это гарантирует, "
+"что ПО действительно является свободным. Конечно, иногда они обнаруживают "
+"проблемы создания пакета, но вообще они не должны этим заниматься. Это ваша "
+"задача, вы должны гарантировать, что загружаемый пакет соответствует "
+"Критериям Debian по определению Свободного ПО, и что он создан качественно."
 
 #. type: Content of: <chapter><section><section><section><para><footnote><para>
 #: beyond-pkging.dbk:409
@@ -4482,7 +4481,7 @@ msgid ""
 msgstr ""
 "Дополнительные проверки вы можете найти в wiki, там некоторые разработчики "
 "размещают свои собственные <ulink url=\"http://wiki.debian.org/"
-"SponsorChecklist\">списки требований для спонсирования пакетов</ulink>."
+"SponsorChecklist\">списки требований для поручения пакетов</ulink>."
 
 #. type: Content of: <chapter><section><section><section><para>
 #: beyond-pkging.dbk:404
@@ -4637,7 +4636,7 @@ msgid ""
 msgstr ""
 "Если аудит не выявил каких-либо проблем, вы можете собрать пакет и загрузить "
 "его в Debian. Помните, что даже если вы не являетесь сопровождающим, как "
-"спонсор вы всё равно ответственны за то, что вы загружаете в Debian. Вот "
+"поручитель вы всё равно ответственны за то, что вы загружаете в Debian. Вот "
 "почему вам нужно отслеживать пакет при помощи <xref linkend=\"pkg-tracking-"
 "system\"/>."
 
@@ -4655,7 +4654,7 @@ msgstr ""
 "своего имени в файле <filename>changelog</filename> или в файле "
 "<filename>control</filename>. Поле <literal>Maintainer</literal> файла "
 "<filename>control</filename> и файла <filename>changelog</filename> должно "
-"сдержать имя того, кто создал пакет, т. е., того, кого вы спонсируете. Так "
+"сдержать имя того, кто создал пакет, т. е., того, за кого вы поручились. Так "
 "этот человек будет получить всю почту от системы отслеживания ошибок."
 
 #. type: Content of: <chapter><section><section><section><para>
@@ -4693,7 +4692,7 @@ msgstr "DEBSIGN_KEYID=<replaceable>ИДЕНТИФИКАТОР-КЛЮЧА</replac
 #. type: Content of: <chapter><section><section><section><title>
 #: beyond-pkging.dbk:500
 msgid "Sponsoring an update of an existing package"
-msgstr "Спонсирование обновления существующего пакета"
+msgstr "Поручение обновления существующего пакета"
 
 #. type: Content of: <chapter><section><section><section><para>
 #: beyond-pkging.dbk:502
@@ -4724,7 +4723,7 @@ msgstr ""
 "Чтобы проверить различия вам нужны обе версии пакета. Загрузите текущую "
 "версию пакета с исходным кодом (при помощи команды <command>apt-get source</"
 "command>)  и соберите его заново (либо загрузите текущий двоичный пакет при "
-"помощи команды <command>aptitude download</command>). Загрузите спонсируемый "
+"помощи команды <command>aptitude download</command>). Загрузите поручаемый "
 "пакет с исходным кодом sponsor (обычно при помощи команды <command>dget</"
 "command>)."
 
@@ -6086,15 +6085,14 @@ msgid ""
 "devel-announce; is another list which is mandatory for anyone who wishes to "
 "follow Debian's development."
 msgstr ""
-"По-первых, подпишитесь на &email-debian-devel; если вы ещё не оформили "
+"По-первых, подпишитесь на &email-debian-devel;, если вы ещё не оформили "
 "подписку.  Отправьте слово <literal>subscribe</literal> в поле "
 "<literal>Тема</literal> вашего сообщения электронной почты на адрес &email-"
 "debian-devel-req;.  В случае возникновения проблем свяжитесь с "
-"администратором списка по адресу &email-listmaster;.  Дополнительная "
-"информация о доступных списках рассылки может быть найдена в разделе <xref "
-"linkend=\"mailing-lists\"/>.  &email-debian-devel-announce; — ещё один "
-"обязательный список для тех, кто хочет следить за разработкой и развитием "
-"Debian."
+"администратором списка по адресу &email-listmaster;. Для дополнительной "
+"информации о доступных списках рассылки см. <xref linkend=\"mailing-lists\"/"
+">.  Ещё один обязательный список рассылки &email-debian-devel-announce;, для "
+"тех кто хочет следить за разработкой и развитием Debian."
 
 #. type: Content of: <chapter><section><para>
 #: new-maintainer.dbk:29
@@ -6103,8 +6101,8 @@ msgid ""
 "before doing any coding, and you should post about your intentions to work "
 "on something to avoid duplicated effort."
 msgstr ""
-"Вам следует подписаться и ненадолго скрыться (то есть, читать сообщения и не "
-"отправлять ничего в список) до начала какой-либо работы над кодом, вам "
+"Вам следует подписаться и ненадолго скрыться (то есть, читать сообщения и "
+"ничего не отправлять в список) до начала какой-либо работы над кодом, вам "
 "следует писать о ваших намерениях по реализации чего-либо для того, чтобы "
 "избежать повторов в работе."
 
@@ -6116,9 +6114,9 @@ msgid ""
 "literal> can also be helpful; see <xref linkend=\"irc-channels\"/>."
 msgstr ""
 "Ещё одним хорошим списком рассылки, на который стоит подписаться, является "
-"&email-debian-mentors;.  Подробность см. в <xref linkend=\"mentors\"/>.  IRC-"
-"канал <literal>#debian</literal> также может быть полезен; см. <xref linkend="
-"\"irc-channels\"/>."
+"&email-debian-mentors;. Для подробностей см. <xref linkend=\"mentors\"/>.  "
+"IRC-канал <literal>#debian</literal> также может быть полезен, см. <xref "
+"linkend=\"irc-channels\"/>."
 
 #. type: Content of: <chapter><section><para>
 #: new-maintainer.dbk:40
@@ -6143,13 +6141,13 @@ msgstr ""
 "связаться с существующими сопровождающими Debian, которые работают над "
 "схожими задачами.  Это позволит вам научиться у опытных разработчиков.  "
 "Например, если вы заинтересованы в создании пакетов Debian для существующего "
-"ПО, вам следует попытаться найти спонсора.  Спонсор будет работать с вами "
-"над вашим пакетом и загрузит его в архив Debian, когда он будет доволен "
-"проделанной вами работой по созданию пакета.  Вы можете найти спонсора, "
+"ПО, вам следует попытаться найти поручителя.  Поручитель будет работать с "
+"вами над вашим пакетом и загрузит его в архив Debian, когда он будет доволен "
+"проделанной вами работой по созданию пакета.  Вы можете найти поручителя "
 "отправив сообщение в список рассылки &email-debian-mentors; с описанием "
-"вашего пакета и себя самого и с просьбой о спонсорстве (дополнительную "
-"информацию о спонсорстве см. в разделах <xref linkend=\"sponsoring\"/> и "
-"<ulink url=\"&url-mentors;\"></ulink>).  С другой стороны, если вы "
+"вашего пакета и себя самого и с просьбой о поручительстве (для "
+"дополнительной информации о поручительстве см. <xref linkend=\"sponsoring\"/"
+"> и <ulink url=\"&url-mentors;\"></ulink>).  С другой стороны, если вы "
 "заинтересованы в переносе Debian на альтернативные архитектуры или ядра, вы "
 "можете подписаться на конкретные списки рассылки и спросить там о том, как "
 "начать работу.  Наконец, если вы заинтересованы в работе над документацией "
@@ -6165,13 +6163,13 @@ msgid ""
 msgstr ""
 "Одной из проблем может быть то, что локальная часть вашего адреса "
 "электронной почты имеет слишком общий характер: следует избегать таких "
-"терминов как mail, admin, root, master, подробности см. в <ulink url=\"&url-"
+"терминов как mail, admin, root, master, подробнее см. <ulink url=\"&url-"
 "debian-lists;\"></ulink>."
 
 #. type: Content of: <chapter><section><title>
 #: new-maintainer.dbk:64
 msgid "Debian mentors and sponsors"
-msgstr "Наставники и спонсоры Debian"
+msgstr "Наставники и поручители Debian"
 
 #. type: Content of: <chapter><section><para>
 #: new-maintainer.dbk:66
@@ -6184,8 +6182,7 @@ msgstr ""
 "Список рассылки &email-debian-mentors; создан для начинающих сопровождающих, "
 "которые ищут помощи в работе над созданием пакетов или в решении связанных с "
 "разработкой проблем.  Каждому новому разработчику рекомендуется подписаться "
-"на этот список рассылки (подробности см. в <xref linkend=\"mailing-lists\"/"
-">)."
+"на этот список рассылки, подробнее см. <xref linkend=\"mailing-lists\"/>."
 
 #. type: Content of: <chapter><section><para>
 #: new-maintainer.dbk:72
@@ -6193,8 +6190,8 @@ msgid ""
 "Those who prefer one-on-one help (e.g., via private email) should also post "
 "to that list and an experienced developer will volunteer to help."
 msgstr ""
-"Те, кто предпочитает помощь в режиме \"один-на-один\" (напр., через частную "
-"электронную почту), также должны написать в этот список рассылки, опытные "
+"Те, кто предпочитает помощь в режиме «один-на-один» (напр., через частную "
+"электронную почту), также должны написать в этот список рассылки и опытные "
 "разработчики помогут вам."
 
 #. type: Content of: <chapter><section><para>
@@ -6209,10 +6206,10 @@ msgid ""
 msgstr ""
 "Кроме того, если у вас имеются пакеты, готовые для добавления в Debian, но "
 "вы ожидаете прохождения процедуры получения статуса нового сопровождающего, "
-"в этом списке рассылки вы можете найти спонсора для загрузки вашего пакета.  "
-"Спонсоры — это те люди, которые являются официальными разработчиками Debian, "
-"и которые желают проверить ваши пакеты и загрузить их. Пожалуйста, для "
-"начала прочтите ЧаВО списка рассылки debian-mentors по адресу <ulink url="
+"в этом списке рассылки вы можете найти поручителя для загрузки вашего "
+"пакета.  Поручители — люди, которые являются официальными разработчиками "
+"Debian и которые желают проверить ваши пакеты и загрузить их. Пожалуйста, "
+"для начала прочтите ЧаВО списка рассылки debian-mentors по адресу <ulink url="
 "\"&url-mentors;\"></ulink>."
 
 #. type: Content of: <chapter><section><para>
@@ -6221,8 +6218,8 @@ msgid ""
 "If you wish to be a mentor and/or sponsor, more information is available in "
 "<xref linkend=\"newmaint\"/>."
 msgstr ""
-"Если вы хотите выступить в качестве наставника и/или спонсора, см. "
-"дополнительную информацию в разделе <xref linkend=\"newmaint\"/>."
+"Если вы хотите выступить в качестве наставника и/или поручителя, см. <xref "
+"linkend=\"newmaint\"/> для дополнительной информации."
 
 #. type: Content of: <chapter><section><title>
 #: new-maintainer.dbk:90
@@ -6288,8 +6285,8 @@ msgstr ""
 "До того как вы фактически зарегистрируетесь, вам следует показать, что вы "
 "можете выполнять компетентную работу и быть хорошим участником разработки.  "
 "Вы можете показать это, отправляя заплаты через систему отслеживания ошибок "
-"и работая некоторое время над пакетом, спонсируемым существующим "
-"разработчиком Debian.  Кроме того, мы ожидаем, что участники заинтересованы "
+"и работая некоторое время над пакетом, имеющим поручителем существующего "
+"разработчика Debian.  Кроме того, мы ожидаем, что участники заинтересованы "
 "во всём проекте целиком, а не просто в сопровождении своих собственных "
 "пакетов.  Если мы можете помочь другим сопровождающим, предоставляя "
 "дополнительную информацию об ошибке или даже заплату, сделайте это!"
@@ -9465,9 +9462,9 @@ msgid ""
 "package or interested in sponsoring the package if needed."
 msgstr ""
 "Хорошо было бы связаться с предыдущими сопровождающими и выяснить, работают "
-"ли они над повторным добавление пакета, заинтересованы ли они в совместном "
-"сопровождении пакета, либо заинтересованы ли они в спонсировании пакета, "
-"если это необходимо."
+"ли они над повторным добавлением пакета, заинтересованы ли они в совместном "
+"сопровождении пакета, заинтересованы ли они быть наставником пакета, если "
+"это необходимо."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1512
